Harden constructed setup and presence